--- a/style.css
+++ b/style.css
@@ -55,14 +55,17 @@ body {
 }
 
 header {
-    background: #333;
-    color: #fff;
-    padding: 20px 0;
+    background: #000;
+    color: #000;
+    padding: 20px 0; 
+    display: flex;
+    flex-direction: row;
 }
 
 nav {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    
     align-items: center;
 }
 
@@ -81,4 +84,61 @@ nav {
 }
 
 .logo img {
-    height: 40px; /* Ajusta el tamaño de la imagen según tu necesidad */
+    height: 70px; /* Ajusta el tamaño de la imagen según tu necesidad */
+}
+.cart {
+    position: relative;
+}
+
+.cart img {
+    width: 30px;
+    height: auto;
+    cursor: pointer;
+}
+
+.cart-count {
+    position: right;
+    top: -10px;
+    right: -30px;
+    background-color: red;
+    color: #fff;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.search {
+    display: flex;
+    align-items: center;
+}
+
+.search input {
+    padding: 5px;
+    width: 300px;
+}
+
+.search button {
+    padding: 5px 10px;
+    background-color: #4572ed;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+.search button:hover {
+    background-color: #4572ed;
+}
+.container{
+    display: flex;
+    flex-direction: row;
+}
+/* Estilos adicionales para la búsqueda en dispositivos móviles */
+
+@media screen and (max-width: 600px) {
+    .search input {
+        width: 200px;
+    }
+}
