--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     --nav-card-size: 240px;
 
     -webkit-font-smoothing: antialiased;
+    font-smoothing: antialiased;
     scroll-behavior: smooth;
 
 
