--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --text-01: #45413E;
-    --light-01: #000000;
+    --light-01: #ffffff;
     --light-02: #ffffff;
     --brand-01: #000;
     --brand-02: #fff;
